--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 bevy = "0.8.0"
+enum-map = "2.4.1"
 rand = "0.8.5"
 
 # Enable a small amount of optimization in debug mode
