--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 bevy = "0.8.0"
 enum-map = "2.4.1"
+itertools = "0.10.3"
 rand = "0.8.5"
 
 # Enable a small amount of optimization in debug mode
