--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 bevy = "0.8.0"
-bevy_prototype_lyon = { version = "0.6.0", optional = true }
+bevy_prototype_lyon = { version = "0.6.0" }
 enum-map = "2.4.1"
 itertools = "0.10.3"
 rand = "0.8.5"
@@ -19,6 +19,3 @@ opt-level = 1
 # Enable high optimizations for dependencies (incl. Bevy), but not for our code:
 [profile.dev.package."*"]
 opt-level = 3
-
-[features]
-debug = ["bevy_prototype_lyon"]
