--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ bevy = "0.8.0"
 bevy_interact_2d = { git = "https://github.com/Anshorei/bevy_rei", rev = "e326e32" }
 bevy_prototype_lyon = { version = "0.6.0" }
 bevy_tweening = "0.5.0"
+big-brain = "0.12.0"
 enum-map = "2.4.1"
 itertools = "0.10.3"
 rand = "0.8.5"
